--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ohddange.github.io/react-tetris",
+  "homepage": "https://ohddange.github.io/react-tetris/tetris",
   "name": "react-tetris",
   "version": "0.1.0",
   "private": true,
